# haskell-coverage-example

./: README.md  cabal.project  flake.nix
a/: a.cabal
a/src/: A.hs
b/: b.cabal
b/src/: B.hs
b/unit-test/: Tests.hs
