cabal-version: 3.6
name:          b
version:       1

library
    exposed-modules:  B
    build-depends:
        , a
        , base

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -fhide-source-paths

test-suite b-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   unit-test
    main-is:          Tests.hs
    build-depends:
        , base
        , hspec
        , b

    default-language: Haskell2010
    ghc-options:      -Wall -fhide-source-paths
